<?xml version="1.0" encoding="utf-8"?>
<!--   PROGRAM:   Assignment 4, strings.xml file
       AUTHOR:    Ross Hettel, John Miller, Alex Wohead
       LOGON ID:  Z1549355, Z159807, Z1624450
       DUE DATE:  11/02 at class time -->
<resources>
    <string name="title">"iPod Trivia Quiz\nPress Menu key to begin"</string>
    <string name="app_name">A4 - Quiz</string>
    <string name="quiz">Take Quiz</string>
    <string name="study">Study</string>
    <string name="about">About</string>
    <string name="about_title"><b><u>CSCI 490 - Quiz app</u></b></string>
    <string name="about_version">Version <b>0.1b</b></string>
    <string name="about_members">Designed by: Ross Hettel, John Miller, Alex Wohead</string>
    <string name="about_quit">To quit, press your device\'s \'Home\' button</string>
    <string name="logtag">A4_debug</string>
    <string name="textCheck">Check Answer</string>
    <string name="textNext">Next Question</string>
    <string name="goodbye">Goodbye</string>
    <string name="goodbye_title">CSCI 490 - Quiz app</string>
    <string name="goodbye_members">Designed by: Ross Hettel, John Miller, Alex Wohead</string>
    <string name="goodbye_quit">To quit, press your device\'s \'Home\' button</string>    
</resources>