<?xml version="1.0" encoding="utf-8"?>
<!--   PROGRAM:   Assignment 4, main.xml file
       AUTHOR:    Ross Hettel, John Miller, Alex Wohead
       LOGON ID:  Z1549355, Z159807, Z1624450
       DUE DATE:  11/02 at class time -->
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip">
    <LinearLayout android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <!-- Text View to show the about information -->
        <TextView
                android:id="@+id/about_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title" 
                android:layout_gravity="center" 
                android:layout_width="wrap_content" 
                android:textSize="20dip"/>
                <TextView
                android:id="@+id/about_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version" 
                android:layout_gravity="center"/>
                <TextView
                android:id="@+id/about_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_members" 
                android:layout_gravity="center" 
                android:paddingTop="20dip"/>
                <TextView
                android:id="@+id/about_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_quit" 
                android:layout_gravity="center" 
                android:paddingTop="40dip"/>
    </LinearLayout>

</ScrollView>