<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainLayout"
    android:weightSum="1">
    <TextView android:text="@string/title" 
    android:gravity="center" 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent" 
    android:layout_weight="0.46" 
    android:capitalize="characters" 
    android:textSize="25dip"
    android:id="@+id/title_message">
    </TextView>
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.46">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button 
        android:text="@string/quiz" 
        android:id="@+id/quiz_button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        </Button>
        <Button 
        android:text="@string/internet" 
        android:id="@+id/internet_button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        </Button>
        <Button 
        android:text="@string/about" 
        android:id="@+id/about_button" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        </Button>
        </TableRow>
    </TableLayout>
</LinearLayout>